fix: scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -57,6 +57,26 @@
 
     --radius: 0.5rem
   }
+
+  /* Custom scrollbar styles */
+  ::-webkit-scrollbar {
+    width: 12px;
+  }
+
+  ::-webkit-scrollbar-track {
+    background: white;
+    border-radius: 10px;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background-color: hsl(var(--muted));
+    border-radius: 10px;
+    border: 3px solid var(--muted);
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: hsl(var(--primary-foreground));
+  }
   .dark {
 
     --background: 240 10% 3.9%;
